--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,9 +11,14 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab ng-if=isValidLogin title="Images" icon-off="ion-ios-person-outline"
-                                icon-on="ion-ios-person" href="#/tab/images">
+  <ion-tab ng-if=isValidLogin title="Images" icon-off="ion-images"
+                                icon-on="ion-image" href="#/tab/images">
     <ion-nav-view name="tab-images"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab ng-if=isValidLogin title="Search" icon-off="ion-ios-search-strong"
+                                icon-on="ion-ios-search" href="#/tab/search">
+    <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
 
   <!-- Directory Tab -->
