--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -16,7 +16,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-images"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab ng-if=isValidLogin title="Search" icon-off="ion-ios-search-strong"
+  <ion-tab title="Search" icon-off="ion-ios-search-strong"
                                 icon-on="ion-ios-search" href="#/tab/search">
     <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
