--- a/www/templates/profile-selector.html
+++ b/www/templates/profile-selector.html
@@ -1,16 +1,18 @@
-
-<ion-view view-title={{dashName}}>
-  <ion-nav-buttons side="secondary">
+<ion-modal-view>
+  <ion-header-bar class="rolodex-header" >
+    <h1 class="title">
+      Profile Selector
+    </h1>
     <div class="buttons">
-      <button class="button button-icon icon ion-person-add"
-        ng-click="addNewProfileForm()">
+      <button class="button button-dark" ng-click="closeProfileSelector()">
+        Close
       </button>
     </div>
-  </ion-nav-buttons>
-  <ion-content>
+  </ion-header-bar>
+  <ion-content class="padding">
     <ion-list>
     <ion-item ng-repeat="profile in profileDB[0].profileRefs">
-      <div class="card" ng-click="editProfile(profile)">
+      <div class="card" ng-click="selectProfile(profile)">
         <div class="item item-divider">
           {{profile.profileName}}
           <div ng-if=profile.data>
@@ -22,15 +24,9 @@
           <img ng-src="{{getImageLink(profile.profilePicture)}}" alt="My Picture">
           <h2>{{profile.firstName}} {{profile.lastName}}</h2>
           <p>{{profile.title}}</p>
-          <p ng-if=profile.defaultProfile>
-            <small style="color:red">This profile is public</small>
-          </p>
-          <ion-option-button class="button-assertive icon ion-minus-circled"
-            ng-click="deleteProfile(profile._id)">
-          </ion-option-button>
         </div>
       </div>
     </ion-item>
-  </ion-list>
-  <ion-content>
-<ion-view>
+    </ion-list>
+  </ion-content>
+</ion-modal-view>
