--- a/www/templates/request-selector.html
+++ b/www/templates/request-selector.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view cache-view="false">
   <ion-header-bar class="rolodex-header" >
     <h1 class="title">
       Pending Requests
